Rewrap line comments to the project's 116-column width
An earlier pass had rewrapped them at around 85 columns, which broke many
sentences mid-phrase. The Eclipse formatter does not join adjacent "//" lines,
so it cannot repair these itself.

Commented-out code, separators, aligned tables, lists and URLs are left alone.
Where two adjacent comment lines were separate thoughts with no terminal
punctuation between them, the missing punctuation has been added so that the
paragraph reads correctly when rewrapped.